[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "acb-tax-mcp"
version = "0.1.0"
description = "MCP server for Canadian adjusted cost base (ACB) and capital gains: average-cost tracking, per-disposition gains, and superficial-loss detection for LLM agents."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Haibin Yu" }]
keywords = [
    "mcp",
    "model-context-protocol",
    "acb",
    "adjusted-cost-base",
    "capital-gains",
    "canada",
    "tax",
    "superficial-loss",
    "claude",
    "llm",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Accounting",
]
dependencies = [
    "mcp>=1.2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
acb-tax-mcp = "acb_tax_mcp.server:main"

[project.urls]
Homepage = "https://github.com/haiiibin/acb-tax-mcp"
Repository = "https://github.com/haiiibin/acb-tax-mcp"
Issues = "https://github.com/haiiibin/acb-tax-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/acb_tax_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
